Fixed homepage list alignment

--- a/src/sass/components/_home-section.scss
+++ b/src/sass/components/_home-section.scss
@@ -79,6 +79,10 @@
 			display: flex;
 			align-items: flex-start;
 
+			&:not(:first-child) {
+				margin-top: em(11/14);
+			}
+
 			&::before {
 				content: '';
 				flex-shrink: 0;
@@ -88,8 +92,11 @@
 				background-size: contain;
 				background-repeat: no-repeat;
 				background-position: center;
-				margin-top: em(7/14);
 				margin-right: em(17/14);
+			}
+
+			span {
+				line-height: (17/14);
 			}
 		}
 	}
